force-app/main/default/objects/Account/fields/Current_balance__c.field-meta.xml
<CustomField>
    <fullName>Current_balance__c</fullName>
    <label>Current balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>