force-app/main/default/objects/Account/fields/Deafult_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Deafult_Payment_Method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deafult Payment Method</label>
    <referenceTo>Payment_Method__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>