force-app/main/default/objects/Account/fields/Delinquent__c.field-meta.xml
<CustomField>
    <fullName>Delinquent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delinquent</label>
    <type>Checkbox</type>
</CustomField>